--- a/.github/workflows/video.yml
+++ b/.github/workflows/video.yml
@@ -30,8 +30,6 @@ jobs:
       run: |
         git config --global user.email "actions@imea.me"
         git config --global user.name "Github Actions"
-        git add database.sqlite3
-        git commit -m "update database by github action"
-        git add docs
-        git commit -m "generate docs"
+        git add .
+        git commit -m "update by github actions"
         git push origin main 
