--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -20,15 +20,22 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
+        sudo apt update
+        sudo apt install -y ffmpeg
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Python Scripts
       env:
-        UID: ${{ secrets.UID }}
-        IMAGE_SERVER_API: ${{ secrets.IMAGE_SERVER_API }}
-        IMAGE_SERVER_KEY: ${{ secrets.IMAGE_SERVER_KEY }}
+        BILIBILI_UID: ${{ secrets.BILIBILI_UID }}
+        ONEDRIVE_TENANT_ID: ${{ secrets.ONEDRIVE_TENANT_ID }}
+        ONEDRIVE_CLIENT_ID: ${{ secrets.ONEDRIVE_CLIENT_ID }}
+        ONEDRIVE_CLIENT_SECRET: ${{ secrets.ONEDRIVE_CLIENT_SECRET }}
+        ONEDRIVE_USER_EMAIL: ${{ secrets.ONEDRIVE_USER_EMAIL }}
+        ONEDRIVE_ROOT_PATH: ${{ secrets.ONEDRIVE_ROOT_PATH }}
+        ONEDRIVE_INDEX_URL: ${{ secrets.ONEDRIVE_INDEX_URL }}
+        
       run: |
-        python update_video.py
+        python app.py
     - name: Update Repo And Push
       run: |
         git config --global user.email "kamino@imea.me"
