--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,6 +24,7 @@ jobs:
         sudo apt install -y ffmpeg
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        mkdir download
     - name: Run Python Scripts
       env:
         BILIBILI_UID: ${{ secrets.BILIBILI_UID }}
